Getter Setter examples

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <script src="app.js"></script>
         <script src="oops.js"></script>
+        <script src="property.js"></script>
         <body>
             
         </body>
